# personal-collection-helper

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RECOMMENDATIONS.md  docker-compose.dev.yml  docker-compose.yml  push_to_github.sh  pyproject.toml  requirements.txt  start.sh  test_startup.py  update-and-rebuild.sh
.claude/: settings.local.json
collection_helper/: __init__.py  __main__.py  cli.py  config.py  logger.py  web.py
collection_helper/booklore/: __init__.py  client.py  models.py
collection_helper/core/: __init__.py  llm_client.py  manager.py  models.py  recommendations.py
collection_helper/emby/: __init__.py  client.py  models.py
docs/api/: booklore-swagger.html  emby-api-info.md
tests/: __init__.py  test_config.py  test_emby.py
